moving sample data to its own folder

--- a/dc-pytorch/MNIST show-off and refine.ipynb
+++ b/dc-pytorch/MNIST show-off and refine.ipynb
@@ -5,7 +5,7 @@
    "id": "6ec67f29",
    "metadata": {},
    "source": [
-    "![Hello eBISS!](./HelloMessage.png)"
+    "![Hello eBISS!](../custom-data/HelloMessage.png)"
    ]
   },
   {
@@ -149,7 +149,7 @@
     "from IPython.display import Image, display\n",
     "\n",
     "for i in range(13):\n",
-    "    display(Image(filename=\"digit%02d.png\" % i))"
+    "    display(Image(filename=\"../custom-data/digit%02d.png\" % i))"
    ]
   },
   {
@@ -171,25 +171,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1647c6d6",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[2, 0, 2, 3, 4, 0, 7, 0, 0, 1, 2, 3, 0]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'mnist' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mPIL\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Image\n\u001b[1;32m      3\u001b[0m images \u001b[38;5;241m=\u001b[39m [Image\u001b[38;5;241m.\u001b[39mopen(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../custom-data/digit\u001b[39m\u001b[38;5;132;01m%02d\u001b[39;00m\u001b[38;5;124m.png\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m i)\u001b[38;5;241m.\u001b[39mconvert(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m1\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m13\u001b[39m)]\n\u001b[0;32m----> 5\u001b[0m labels, tensors \u001b[38;5;241m=\u001b[39m \u001b[43mmnist\u001b[49m\u001b[38;5;241m.\u001b[39minference(images)\n\u001b[1;32m      6\u001b[0m labels\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'mnist' is not defined"
+     ]
     }
    ],
    "source": [
     "from PIL import Image\n",
     "\n",
-    "images = [Image.open(\"digit%02d.png\" % i).convert('1') for i in range(13)]\n",
+    "images = [Image.open(\"../custom-data/digit%02d.png\" % i).convert('1') for i in range(13)]\n",
     "\n",
     "labels, tensors = mnist.inference(images)\n",
     "labels"
