Adding further information on knn, and cleaning up all notebooks in general

--- a/dc-pytorch/MNIST training.ipynb
+++ b/dc-pytorch/MNIST training.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "07cc229f",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "59f8ed6d",
    "metadata": {},
    "outputs": [],
@@ -33,32 +33,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9b599ca6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting epoch 1\n",
-      "Train returned loss=2.288949\n",
-      "Test returned accuracy=26.66\n",
-      "Starting epoch 2\n",
-      "Train returned loss=2.096043\n",
-      "Test returned accuracy=47.27\n",
-      "Starting epoch 3\n",
-      "Train returned loss=1.917508\n",
-      "Test returned accuracy=50.22\n",
-      "Starting epoch 4\n",
-      "Train returned loss=1.515047\n",
-      "Test returned accuracy=54.89\n",
-      "Starting epoch 5\n",
-      "Train returned loss=1.165924\n",
-      "Test returned accuracy=52.54\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mnist_fast = MNIST()\n",
     "\n",
@@ -73,28 +51,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f1e0c063",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting epoch 1\n",
-      "Train returned loss=0.011619\n",
-      "Test returned accuracy=98.46\n",
-      "Starting epoch 2\n",
-      "Train returned loss=0.011441\n",
-      "Test returned accuracy=98.71\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mnist = MNIST()\n",
     "\n",
     "########################################\n",
-    "#MNIST.delete_alias(\"MyTrainedMNIST\")  # Just for debugging purposes\n",
+    "MNIST.delete_alias(\"MyTrainedMNIST\")  # Just for debugging purposes\n",
     "########################################\n",
     "\n",
     "mnist.make_persistent(alias=\"MyTrainedMNIST\")\n",
